<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.com.cs478proj4.MainActivity">

    <Button
        android:id="@+id/startStopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/start_stop"
        android:visibility="visible"/>

    <Button
        android:id="@+id/toastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/toast"
        android:visibility="visible" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/startStopButton"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/TL"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top_left"
                android:visibility="visible"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/TM"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top_middle"
                android:visibility="visible"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/TR"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top_right"
                android:visibility="visible"
                app:srcCompat="@mipmap/ic_launcher" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/ML"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/middle_left"
                android:visibility="visible"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/MM"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/middle_middle"
                android:visibility="visible"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/MR"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/middle_right"
                android:visibility="visible"
                app:srcCompat="@mipmap/ic_launcher" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/BL"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/bottom_left"
                android:visibility="visible"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/BM"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/bottom_middle"
                android:visibility="visible"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/BR"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/bottom_right"
                android:visibility="visible"
                app:srcCompat="@mipmap/ic_launcher" />
        </TableRow>

    </TableLayout>

</RelativeLayout>

